package eu.telecomnancy.flashcards.controller;

public class ControllerDeckContent {

}
