package eu.telecomnancy.flashcards.controller;

import javafx.fxml.FXMLLoader;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.layout.GridPane;

import java.util.Random;

import eu.telecomnancy.flashcards.Observer;
import eu.telecomnancy.flashcards.model.Card;
import eu.telecomnancy.flashcards.model.Deck;
public class ControllerLearning implements Observer
{
    @FXML
    private Button repButton;
    @FXML
    private Label Rep;
    @FXML
    private GridPane gridP;
    @FXML
    private Label Ques;
    private Deck deck;
    private Card card;

    public void ControllerLearning(Deck deck)
    {
        this.deck = deck;
        this.reagir();
    }
    @FXML
    public void AffRep(ActionEvent event)
    {
        Rep.setVisible(true);
        gridP.setVisible(true);
        repButton.setVisible(false);
    }
    @FXML
    public void Difficile(ActionEvent event)
    {
        this.reagir();
    }
    @FXML
    public void Correct(ActionEvent event)
    {
        this.reagir();
    }
    @FXML
    public void Revoir(ActionEvent event)
    {
        this.reagir();
    }
    @FXML
    public void Facile(ActionEvent event)
    {
        this.reagir();
    }
    @FXML
    public void exit()
    {

    }
    public void reagir()
    {
        int leng = deck.deck.size();
        int i = new Random().nextInt(leng);
        card = deck.deck.get(i);
        Rep.setVisible(false);
        gridP.setVisible(false);
        Ques.setText(card.question);
        Rep.setText(card.answer);
        repButton.setVisible(true);
    }
}