package eu.telecomnancy.flashcards.model;

import java.util.ArrayList;

public class CardList {
    
    private ArrayList<Card> cardList;
    
    public CardList(ArrayList<Card> cardList) {
        this.cardList = cardList;
    }

    public CardList() {
        this.cardList = new ArrayList<Card>();
    }

    public void addCard(Card card) {
        cardList.add(card);
    }
}
