@startuml
title "Diagramme de classe - Flashcards"

class ViewChanger {
    - stage : Stage
    - scene : Scene
    - rootDeckList : Parent
    - rootCardList : Parent
    - rootDeckContent : Parent
    - rootLearning : Parent
    - rootNewCard : Parent
    - rootStatistics : Parent
}

interface Observer{}
abstract Observable{}

class Card{}
class CardList{}
class Deck{}
class DeckList{}

class ControllerLearning{}
class ControllerDeckList{}
class ControllerCardList{}
class ControllerDeckContent{}
class ControllerNewCard{}
class ControllerStatistics{}

Observer <|.. ViewChanger

Observer <|.. ControllerLearning
Observer <|.. ControllerDeckList
Observer <|.. ControllerCardList
Observer <|.. ControllerDeckContent
Observer <|.. ControllerNewCard
Observer <|.. ControllerStatistics

Observable <|.. Deck

CardList -- "*" Card
DeckList -- "*" Deck

Card "*" -- "1" Deck
Observable "1" -- "*" Observer

@enduml